# AoC22

./: .gitignore  CMakeLists.txt  README.md  init.sh
.github/workflows/: cmake.yml
1/: Makefile  main.cpp
15/: combine.cpp  combine.h  helpers.cpp  helpers.h  main.cpp
15/tests/: example.cpp  gtest.cpp
2/: main.cpp
2/tests/: test.cpp
3/: main.cpp  main.hpp  main2.cpp
3/tests/: test.cpp
4/: main.cpp  main2.cpp
5/: main.cpp  main2.cpp
6/: main.cpp
8/: checkvisible.cpp  checkvisible.hpp  ingest.cpp  ingest.hpp  main.cpp  matrix.cpp  matrix.hpp  printarray.cpp  printarray.hpp
8/tests/: example.cpp  tests.cpp
9/: main.cpp
java/: pom.xml
java/src/main/java/: D12.kt  D20.kt
java/src/main/java/com/jimwobser/: D1.java  D10.java  D11.java  Main.java
java/src/main/kotlin/com/jimwobser/: D25.kt
java/src/test/java/: D25Test.java
